--- a/app/src/main/res/layout/activity_docentes.xml
+++ b/app/src/main/res/layout/activity_docentes.xml
@@ -47,14 +47,23 @@
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
                     android:paddingTop="16dp">
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/RecyclerDocentes"
+                            android:layout_width="match_parent"
+                            android:layout_height="?attr/actionBarSize"
+                            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+                    </ScrollView>
 
-                    <TextView
+                    <!--<TextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:text="TODOS LOS DOCENTES"
                         android:textSize="40dp"
                         android:gravity="center"/>
-
+-->
                 </LinearLayout>
 
                 <LinearLayout
